@@ -81,12 +81,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
+
+                <!-- This manual configuration disturbed Jacoco plugin
+                argline is automatically added by Jacoco plugin -->
+                <!-- <configuration>
                     <argLine>
-                        --add-opens ui/ui=ALL-UNNAMED 
-                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        add-opens ui/ui=ALL-UNNAMED 
+                        add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                     </argLine>
-                </configuration>
+                </configuration> -->
             </plugin>
 
             <!-- JavaFX Maven Plugin -->
